--- a/scripts/2_noscemus-spacy-preprocess.ipynb
+++ b/scripts/2_noscemus-spacy-preprocess.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "28136ccf81624019",
    "metadata": {
     "ExecuteTime": {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "b5bad77186dbf7cd",
    "metadata": {
     "ExecuteTime": {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "9c0a5b1532dba641",
    "metadata": {
     "ExecuteTime": {
@@ -91,10 +91,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
    "id": "b098c715-50e1-443e-8980-872f89efb463",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-06T09:00:57.632019Z",
+     "start_time": "2024-11-06T09:00:57.627469Z"
+    }
+   },
    "source": [
     "import spacy\n",
     "import os\n",
@@ -105,26 +108,23 @@
     "from unidecode import unidecode\n",
     "import sddk\n",
     "import pandas as pd\n",
-    "import re"
-   ]
+    "import re\n",
+    "import cupy\n",
+    "import json"
+   ],
+   "outputs": [],
+   "execution_count": 12
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
    "id": "f09f686b-3031-4674-af2d-c42dd1bd3bcc",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "An error occurred: name 'cupy' is not defined\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-06T08:38:36.731509Z",
+     "start_time": "2024-11-06T08:38:36.726586Z"
     }
-   ],
+   },
    "source": [
-    "\n",
-    "\n",
     "try:\n",
     "    # Check if GPU is available\n",
     "    spacy.require_gpu()\n",
@@ -139,13 +139,31 @@
     "    print(f\"Unable to use GPU for SpaCy: {e}\")\n",
     "except Exception as ex:\n",
     "    print(f\"An error occurred: {ex}\")\n"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CuPy is able to use the GPU.\n",
+      "GPU is available for SpaCy.\n"
+     ]
+    }
+   ],
+   "execution_count": 7
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
    "id": "5872e40f-610e-4ebb-9d4f-794fc47820b9",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-06T08:38:20.719385Z",
+     "start_time": "2024-11-06T08:38:20.711298Z"
+    }
+   },
+   "source": [
+    "spacy.require_gpu() "
+   ],
    "outputs": [
     {
      "data": {
@@ -153,44 +171,44 @@
        "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "spacy.require_gpu() "
-   ]
+   "execution_count": 5
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
    "id": "4f8a705cb29692c7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-26T12:10:23.559326Z",
-     "start_time": "2024-07-26T12:10:21.625816Z"
+     "end_time": "2024-11-06T08:38:28.771586Z",
+     "start_time": "2024-11-06T08:38:25.685027Z"
     }
    },
-   "outputs": [],
    "source": [
     "nlp = spacy.load('la_core_web_lg')"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 6
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
    "id": "660e4b488203ea76",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-07-26T12:10:24.192337Z",
-     "start_time": "2024-07-26T12:10:24.188409Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
+    },
+    "ExecuteTime": {
+     "end_time": "2024-11-06T08:38:41.513421Z",
+     "start_time": "2024-11-06T08:38:41.507700Z"
     }
    },
+   "source": [
+    "nlp.max_length # the maximal number of characters an input document can contain to be processed  "
+   ],
    "outputs": [
     {
      "data": {
@@ -203,9 +221,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "nlp.max_length # the maximal number of characters an input document can contain to be processed  "
-   ]
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
@@ -222,34 +238,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
    "id": "78b894b2e11f2c5",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-07-26T11:48:25.162405Z",
-     "start_time": "2024-07-26T11:48:25.157440Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
+    },
+    "ExecuteTime": {
+     "end_time": "2024-11-06T08:38:44.340585Z",
+     "start_time": "2024-11-06T08:38:44.334859Z"
     }
    },
+   "source": [
+    "# what elements are in the pipeline?\n",
+    "nlp.pipeline"
+   ],
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('senter', <spacy.pipeline.senter.SentenceRecognizer at 0x7eeeccc83be0>),\n",
+       "[('senter', <spacy.pipeline.senter.SentenceRecognizer at 0x72bb27145d80>),\n",
        " ('normer', <function la_core_web_lg.functions.normer(doc)>),\n",
-       " ('tok2vec', <spacy.pipeline.tok2vec.Tok2Vec at 0x7eeeccc83a60>),\n",
-       " ('tagger', <spacy.pipeline.tagger.Tagger at 0x7ef0916b4100>),\n",
+       " ('tok2vec', <spacy.pipeline.tok2vec.Tok2Vec at 0x72bb27145180>),\n",
+       " ('tagger', <spacy.pipeline.tagger.Tagger at 0x72bb27145e40>),\n",
        " ('morphologizer',\n",
-       "  <spacy.pipeline.morphologizer.Morphologizer at 0x7eeeccc83520>),\n",
+       "  <spacy.pipeline.morphologizer.Morphologizer at 0x72bb27145ea0>),\n",
        " ('trainable_lemmatizer',\n",
-       "  <spacy.pipeline.edit_tree_lemmatizer.EditTreeLemmatizer at 0x7eeeccc83d00>),\n",
-       " ('parser', <spacy.pipeline.dep_parser.DependencyParser at 0x7eeeca145620>),\n",
+       "  <spacy.pipeline.edit_tree_lemmatizer.EditTreeLemmatizer at 0x72bb27145b40>),\n",
+       " ('parser', <spacy.pipeline.dep_parser.DependencyParser at 0x72bb24bbc890>),\n",
        " ('lookup_lemmatizer',\n",
        "  <function la_core_web_lg.functions.make_lookup_lemmatizer_function(doc)>),\n",
-       " ('ner', <spacy.pipeline.ner.EntityRecognizer at 0x7eeeca145690>)]"
+       " ('ner', <spacy.pipeline.ner.EntityRecognizer at 0x72bb24bbc7b0>)]"
       ]
      },
      "execution_count": 9,
@@ -257,14 +276,11 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "# what elements are in the pipeline?\n",
-    "nlp.pipeline"
-   ]
+   "execution_count": 9
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "893dfae9c690b086",
    "metadata": {
     "ExecuteTime": {
@@ -284,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "b6ee2425d50e7ceb",
    "metadata": {
     "ExecuteTime": {
@@ -298,7 +314,55 @@
    },
    "outputs": [],
    "source": [
-    "doc = nlp(vitruvius)"
+    "sent = \"Architecti Augusti est scientia pluribus disciplinis et variis eruditionibus ornata, quae ab ceteris artibus perficiuntur. Opera ea nascitur et fabrica et ratiocinatione (Aristot.).\"\n",
+    "doc = nlp(sent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e658d51e-2439-4d10-8553-b5500d3c03f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Architecti architectus\n",
+      "Augusti Augustus\n",
+      "est sum\n",
+      "scientia scientia\n",
+      "pluribus plus\n",
+      "disciplinis disciplina\n",
+      "et et\n",
+      "variis uarius\n",
+      "eruditionibus eruditio\n",
+      "ornata orno\n",
+      ", ,\n",
+      "quae qui\n",
+      "ab ab\n",
+      "ceteris ceterus\n",
+      "artibus ars\n",
+      "perficiuntur perficio\n",
+      ". .\n",
+      "Opera opera\n",
+      "ea is\n",
+      "nascitur nascor\n",
+      "et et\n",
+      "fabrica fabrica\n",
+      "et et\n",
+      "ratiocinatione ratiocinatio\n",
+      "( (\n",
+      "Aristot Aristot\n",
+      ". .\n",
+      ") )\n",
+      ". .\n"
+     ]
+    }
+   ],
+   "source": [
+    "for t in doc:\n",
+    "    print(t.text, t.lemma_)"
    ]
   },
   {
@@ -1277,17 +1341,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
    "id": "153977c0-9a43-421f-9c2f-39d22ca57f34",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-06T08:39:54.480429Z",
+     "start_time": "2024-11-06T08:39:54.476167Z"
+    }
+   },
    "source": [
     "target_path = \"/srv/data/tome/noscemus/sents_data/\"\n",
     "try:\n",
     "    os.mkdir(target_path)\n",
     "except:\n",
     "    pass"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 10
   },
   {
    "cell_type": "code",
@@ -1646,6 +1715,67 @@
     "sents_data = pickle.load(open(target_path + filenames_list[20].replace(\".txt\", \".pickle\"), \"rb\"))\n",
     "sents_data[100:110]"
    ]
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-06T09:04:24.892406Z",
+     "start_time": "2024-11-06T09:04:24.887942Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "source_pickles = \"/srv/data/tome/noscemus/sents_data/\"\n",
+    "target_jsons = \"/srv/data/tome/noscemus/sents_data_jsons/\"\n",
+    "try:\n",
+    "    os.mkdir(target_jsons)\n",
+    "except:\n",
+    "    pass"
+   ],
+   "id": "3673ac139241f316",
+   "outputs": [],
+   "execution_count": 15
+  },
+  {
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
+    "ExecuteTime": {
+     "start_time": "2024-11-06T09:04:31.077937Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "for fn in os.listdir(source_pickles):\n",
+    "    doc_id =  fn.rpartition(\".\")[0]\n",
+    "    with open(source_pickles + fn, \"rb\") as f:\n",
+    "        sents_data = pickle.load(f)\n",
+    "    sents_data_updated = []\n",
+    "    for sent_n, (sent_text, sent_data) in enumerate(sents_data):\n",
+    "        sents_data_updated.append((doc_id, sent_n, sent_text, sent_data))\n",
+    "    with open(target_jsons + doc_id + \".json\", \"w\") as f:\n",
+    "        json.dump(sents_data_updated, f)"
+   ],
+   "id": "3abe004a748b7d29",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "7bdcd4a4383b37d5"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "bbfbd9314fbbf478"
   },
   {
    "cell_type": "code",
