--- a/scripts/4_metadata-aggregation&cleaning.ipynb
+++ b/scripts/4_metadata-aggregation&cleaning.ipynb
@@ -5497,6 +5497,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "bc4fa9f6-7222-49cb-8834-166f7af78ead",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if you are on ccs-server\n",
+    "!cp ../data/metadata_table_long.csv /srv/data/tome/noscemus/metadata_table_long.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 61,
    "id": "b3b42026f71315c1",
    "metadata": {
