--- a/scripts/7_vocabs&lila-embeddings.ipynb
+++ b/scripts/7_vocabs&lila-embeddings.ipynb
@@ -2774,6 +2774,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "b396ae18-9fd2-4cb5-8422-22a640709acb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cp ../data/filtered_vocab_df.json /srv/data/tome/noscemus/filtered_vocab_df.json"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 76,
    "id": "4340ddbf65e717fe",
    "metadata": {
@@ -3155,6 +3165,7 @@
     }
    ],
    "source": [
+    "# read the old one just for comparison\n",
     "filtered_vocab_df_OLD = pd.read_json(\"../data/filtered_vocab_df_OLD.json\")\n",
     "filtered_vocab_df_OLD.head(20)"
    ]
